force-app/main/default/objects/Renewal_CSR__c/Renewal_CSR__c.object-meta.xml
<CustomObject>
    <description>Renewal Charitable Solicitation Registration</description>
    <label>Renewal CSR</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal CSR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>