force-app/main/default/objects/Renewal_CSR__c/fields/Authorized_to_Sign_Checks__c.field-meta.xml
<CustomField>
    <fullName>Authorized_to_Sign_Checks__c</fullName>
    <label>Authorized to Sign Checks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>