force-app/main/default/objects/Renewal_CSR__c/fields/Banks__c.field-meta.xml
<CustomField>
    <fullName>Banks__c</fullName>
    <inlineHelpText>9. Banks:  Banks where the organization maintains its funds</inlineHelpText>
    <label>Banks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>