force-app/main/default/objects/Renewal_CSR__c/fields/Budget_Approval__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approval__c</fullName>
    <label>Budget Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>