force-app/main/default/objects/Renewal_CSR__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Renewal CSR</relationshipLabel>
    <relationshipName>Renewal_CSR</relationshipName>
    <type>Lookup</type>
</CustomField>