force-app/main/default/objects/Renewal_CSR__c/fields/Currently_providing_services__c.field-meta.xml
<CustomField>
    <fullName>Currently_providing_services__c</fullName>
    <inlineHelpText>Currently providing services? (Yes/No)</inlineHelpText>
    <label>Currently providing services?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>