force-app/main/default/objects/Renewal_CSR__c/fields/Custody_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Custody_of_Funds__c</fullName>
    <label>Custody of Funds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>