force-app/main/default/objects/Renewal_CSR__c/fields/Distribution_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Distribution_of_Funds__c</fullName>
    <label>Distribution of Funds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>