force-app/main/default/objects/Renewal_CSR__c/fields/Fund_Raising_Activities__c.field-meta.xml
<CustomField>
    <fullName>Fund_Raising_Activities__c</fullName>
    <label>Fund Raising Activities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>