force-app/main/default/objects/Renewal_CSR__c/fields/Government_Grants__c.field-meta.xml
<CustomField>
    <fullName>Government_Grants__c</fullName>
    <inlineHelpText>If any monies are reported on the federal tax return (in the Statement of Revenue) as government grants, then please provide a breakdown by agency name and amount for each grant. The breakdown below must match the amount reported in the tax return.</inlineHelpText>
    <label>Government Grants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>