force-app/main/default/objects/Renewal_CSR__c/fields/Methods_of_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Methods_of_Solicitation__c</fullName>
    <inlineHelpText>Please list any methods of solicitation you use or anticipate using (add/delete as necessary):</inlineHelpText>
    <label>Methods of Solicitation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>