force-app/main/default/objects/Renewal_CSR__c/fields/Organization_Documents__c.field-meta.xml
<CustomField>
    <fullName>Organization_Documents__c</fullName>
    <inlineHelpText>Please review and confirm that the documents listed below are the most current. If there have been any updates/changes, please provide copies of those documents.</inlineHelpText>
    <label>Organization Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>