force-app/main/default/objects/Renewal_CSR__c/fields/Other_Names__c.field-meta.xml
<CustomField>
    <fullName>Other_Names__c</fullName>
    <label>Other Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>