force-app/main/default/objects/Renewal_CSR__c/fields/Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address__c</fullName>
    <label>Primary Address</label>
    <type>Address</type>
</CustomField>