force-app/main/default/objects/Renewal_CSR__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <inlineHelpText>Specific programs run by the organization in order to accomplish its stated purpose (please provide a brief description of each program).</inlineHelpText>
    <label>Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>