force-app/main/default/objects/Renewal_CSR__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>The stated purpose pursued by the organization as you would like it to appear on state websites.</inlineHelpText>
    <label>Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>