force-app/main/default/objects/Renewal_CSR__c/fields/R10A_Ohio__c.field-meta.xml
<CustomField>
    <fullName>R10A_Ohio__c</fullName>
    <inlineHelpText>Please provide the total amount of funds received from each of the following states during the last fiscal year</inlineHelpText>
    <label>R10A Ohio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>