force-app/main/default/objects/Renewal_CSR__c/fields/R10B__c.field-meta.xml
<CustomField>
    <fullName>R10B__c</fullName>
    <inlineHelpText>Does the organization conduct a vehicle donation program?</inlineHelpText>
    <label>Vehicle Donation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>