force-app/main/default/objects/Renewal_CSR__c/fields/R11A__c.field-meta.xml
<CustomField>
    <fullName>R11A__c</fullName>
    <inlineHelpText>A.    Please provide the Board of Directors List (names and titles) for the current fiscal year ( ).</inlineHelpText>
    <label>Board List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>