force-app/main/default/objects/Renewal_CSR__c/fields/R11A_Compensation__c.field-meta.xml
<CustomField>
    <fullName>R11A_Compensation__c</fullName>
    <label>R11A Compensation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>