force-app/main/default/objects/Renewal_CSR__c/fields/R11A_Name__c.field-meta.xml
<CustomField>
    <fullName>R11A_Name__c</fullName>
    <label>R11A Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>