force-app/main/default/objects/Renewal_CSR__c/fields/R11A_Title2__c.field-meta.xml
<CustomField>
    <fullName>R11A_Title2__c</fullName>
    <label>R11A Title2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>