force-app/main/default/objects/Renewal_CSR__c/fields/R11B__c.field-meta.xml
<CustomField>
    <fullName>R11B__c</fullName>
    <inlineHelpText>B.   Are any officers, directors, trustees, or employees related to one another or to any employee by blood, marriage, or adoption?</inlineHelpText>
    <label>Related Persons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>