force-app/main/default/objects/Renewal_CSR__c/fields/R11Ba__c.field-meta.xml
<CustomField>
    <fullName>R11Ba__c</fullName>
    <inlineHelpText>a.   If yes, please provide names, titles, and type of relationship.</inlineHelpText>
    <label>R11Ba</label>
    <length>255</length>
    <type>Text</type>
</CustomField>