force-app/main/default/objects/Renewal_CSR__c/fields/R11C__c.field-meta.xml
<CustomField>
    <fullName>R11C__c</fullName>
    <inlineHelpText>C.  How many Board of Directors meetings were there during the last fiscal year (             )?</inlineHelpText>
    <label>Board Meetings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>