force-app/main/default/objects/Renewal_CSR__c/fields/R11D__c.field-meta.xml
<CustomField>
    <fullName>R11D__c</fullName>
    <inlineHelpText>D.    During this report period, was there any theft, embezzlement, diversion or misuse of the organization charitable property or funds?</inlineHelpText>
    <label>Fund Misappropriation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>