force-app/main/default/objects/Renewal_CSR__c/fields/R12_A__c.field-meta.xml
<CustomField>
    <fullName>R12_A__c</fullName>
    <inlineHelpText>A.   Did the organization receive financial support from other nonprofit organizations (foundations, public charities, combined campaigns, etc.) during the last fiscal year (   -   )?</inlineHelpText>
    <label>Non-Profit Donors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>