force-app/main/default/objects/Renewal_CSR__c/fields/R12_Aa__c.field-meta.xml
<CustomField>
    <fullName>R12_Aa__c</fullName>
    <inlineHelpText>a.   If yes, please list the names of the organizations.</inlineHelpText>
    <label>R12(Aa)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>