force-app/main/default/objects/Renewal_CSR__c/fields/R12_B__c.field-meta.xml
<CustomField>
    <fullName>R12_B__c</fullName>
    <inlineHelpText>B.   If you received financial support from private foundations, please list the name of the organization and the amount received.</inlineHelpText>
    <label>Private Foundations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>