force-app/main/default/objects/Renewal_CSR__c/fields/R12B_Amount2__c.field-meta.xml
<CustomField>
    <fullName>R12B_Amount2__c</fullName>
    <label>R12B Amount2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>