force-app/main/default/objects/Renewal_CSR__c/fields/R12B_Name3__c.field-meta.xml
<CustomField>
    <fullName>R12B_Name3__c</fullName>
    <label>R12B Name3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>