force-app/main/default/objects/Renewal_CSR__c/fields/R13_Amount__c.field-meta.xml
<CustomField>
    <fullName>R13_Amount__c</fullName>
    <label>R13 Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>