force-app/main/default/objects/Renewal_CSR__c/fields/R13_Name2__c.field-meta.xml
<CustomField>
    <fullName>R13_Name2__c</fullName>
    <label>R13 Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>