force-app/main/default/objects/Renewal_CSR__c/fields/R13_Name3__c.field-meta.xml
<CustomField>
    <fullName>R13_Name3__c</fullName>
    <label>R13 Name3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>