force-app/main/default/objects/Renewal_CSR__c/fields/R14_Email__c.field-meta.xml
<CustomField>
    <fullName>R14_Email__c</fullName>
    <inlineHelpText>Email</inlineHelpText>
    <label>R14 Email</label>
    <type>Email</type>
</CustomField>