force-app/main/default/objects/Renewal_CSR__c/fields/R14_Name_2__c.field-meta.xml
<CustomField>
    <fullName>R14_Name_2__c</fullName>
    <inlineHelpText>Name</inlineHelpText>
    <label>R14 Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>