force-app/main/default/objects/Renewal_CSR__c/fields/R14_Title__c.field-meta.xml
<CustomField>
    <fullName>R14_Title__c</fullName>
    <inlineHelpText>Title</inlineHelpText>
    <label>R14 Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>