force-app/main/default/objects/Renewal_CSR__c/fields/R5_a__c.field-meta.xml
<CustomField>
    <fullName>R5_a__c</fullName>
    <inlineHelpText>Besides its legal name, does the organization use any other names to solicit?</inlineHelpText>
    <label>R5(a) Other Names</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>