force-app/main/default/objects/Renewal_CSR__c/fields/R5_b__c.field-meta.xml
<CustomField>
    <fullName>R5_b__c</fullName>
    <inlineHelpText>If yes, please list them and provide any copies of DBA or trade name registrations.</inlineHelpText>
    <label>R5(b)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>