force-app/main/default/objects/Renewal_CSR__c/fields/R6_1_4__c.field-meta.xml
<CustomField>
    <fullName>R6_1_4__c</fullName>
    <inlineHelpText>Fully executed copies of all contracts, addenda, amendments, etc.</inlineHelpText>
    <label>Contracts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>