force-app/main/default/objects/Renewal_CSR__c/fields/R6_1_5__c.field-meta.xml
<CustomField>
    <fullName>R6_1_5__c</fullName>
    <inlineHelpText>Amount the charitable organization paid the entity in FYE (  ):</inlineHelpText>
    <label>PFR Compensation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>