force-app/main/default/objects/Renewal_CSR__c/fields/R6_1_6__c.field-meta.xml
<CustomField>
    <fullName>R6_1_6__c</fullName>
    <inlineHelpText>Gross receipts as a result of contract during (  ):</inlineHelpText>
    <label>PFR Gross Receipts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>