force-app/main/default/objects/Renewal_CSR__c/fields/R6_1_Name__c.field-meta.xml
<CustomField>
    <fullName>R6_1_Name__c</fullName>
    <inlineHelpText>Name</inlineHelpText>
    <label>R6.1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>