force-app/main/default/objects/Renewal_CSR__c/fields/R6_2__c.field-meta.xml
<CustomField>
    <fullName>R6_2__c</fullName>
    <inlineHelpText>We have on file that the entities below were used during the last fiscal year (  ):</inlineHelpText>
    <label>Past PFRs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>