force-app/main/default/objects/Renewal_CSR__c/fields/R6_2_Address_c__c.field-meta.xml
<CustomField>
    <fullName>R6_2_Address_c__c</fullName>
    <label>R6.2 Address</label>
    <type>Address</type>
</CustomField>