force-app/main/default/objects/Renewal_CSR__c/fields/R6_3_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>R6_3_Phone_Number__c</fullName>
    <inlineHelpText>Phone number</inlineHelpText>
    <label>R6.3 Phone Number</label>
    <type>Phone</type>
</CustomField>