force-app/main/default/objects/Renewal_CSR__c/fields/R6_4__c.field-meta.xml
<CustomField>
    <fullName>R6_4__c</fullName>
    <inlineHelpText>If contract has been terminated, please provide termination date:</inlineHelpText>
    <label>Termination Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>