force-app/main/default/objects/Renewal_CSR__c/fields/R6_5__c.field-meta.xml
<CustomField>
    <fullName>R6_5__c</fullName>
    <inlineHelpText>We have a copy of the contract on file with an effective date of ( ) (copy attached for your reference). No copy is needed unless there have been any amendments.</inlineHelpText>
    <label>Active Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>