force-app/main/default/objects/Renewal_CSR__c/fields/Signatures__c.field-meta.xml
<CustomField>
    <fullName>Signatures__c</fullName>
    <inlineHelpText>The registration forms must be signed by one of the organization’s executive officers/directors (e.g. CEO, Chairman, President, Executive Director, etc.) and the organization’s chief fiscal officer (e.g. CFO, Treasurer, VP of Finance, etc.). Please review the listed signers and update as necessary. For purposes of Mississippi, e-mail addresses are required as the filing will need to be electronically signed (instructions will be provided separately).</inlineHelpText>
    <label>Signatures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>