force-app/main/default/objects/Renewal_CSR__c/fields/Use_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Use_of_Funds__c</fullName>
    <inlineHelpText>Upon what will the collected funds be spent?</inlineHelpText>
    <label>Use of Funds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>