force-app/main/default/objects/Renewal_CSR__c/fields/X15_1_Articles_of_Incorporation_Changes__c.field-meta.xml
<CustomField>
    <fullName>X15_1_Articles_of_Incorporation_Changes__c</fullName>
    <inlineHelpText>Articles of Incorporation – Changes? (Yes/No)</inlineHelpText>
    <label>15.1.Articles of Incorporation – Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>