force-app/main/default/objects/Renewal_CSR__c/fields/X17_Changes__c.field-meta.xml
<CustomField>
    <fullName>X17_Changes__c</fullName>
    <inlineHelpText>Changes? (Yes/No)</inlineHelpText>
    <label>17, Changes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>