force-app/main/default/objects/Renewal_CSR__c/fields/X6_1_If_Yes__c.field-meta.xml
<CustomField>
    <fullName>X6_1_If_Yes__c</fullName>
    <inlineHelpText>Please provide the following for each entity:</inlineHelpText>
    <label>6.1 If Yes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>